falta  form y servicio

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
 <body>
     <header>
         <h1>Alex Construction</h1>
-    </header>
-    <main>
         <nav>
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
             <a href="contacto.html">Contacto</a>
             <a href="blog.html">Blog</a>
         </nav>
-        <div class="area-hero">
-
+    </header>
+    <main>
+        <div>
+            <!-- Imagen de Area Hero -->
         </div>
-        <div class="servicios">
+        <div>
             <h2>Mis Servicios</h2>
-            <section class="servicio">
+            <section>
                 <h3>Servicio 1</h3>
-                <div class="iconos"></div>
+                <div><!--Imagen de Icono---></div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
@@ -47,9 +47,9 @@
                     accumsan feugiat sapien eget finibus.
                 </p>
             </section>
-            <section class="servicio">
+            <section>
                 <h3>Servicio 2</h3>
-                <div class="iconos"></div>
+                <div><!--Imagen de Icono---></div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
@@ -57,9 +57,9 @@
                     accumsan feugiat sapien eget finibus.
                 </p>
             </section>
-            <section class="servicio">
+            <section>
                 <h3>Servicio 3</h3>
-                <div class="iconos"></div>
+                <div><!--Imagen de Icono---></div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
