--- a/blog.html
+++ b/blog.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blof</title>
+    <meta name="description" content="Blog de datos de interes">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <title>Blog</title>
 </head>
 
 <body>
     <header>
-        <h1>Mi Blog</h1>
+        <!-- Puede ser que el area hero acabe aquí -->
+        <h1>Alex Construction</h1>
         <nav>
+            <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="6%"></a>
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
             <a href="contacto.html">Contacto</a>
@@ -19,31 +23,60 @@
         </nav>
     </header>
     <main>
+        <a href="#articulo1">Articulo 1</a>
+        <a href="#articulo2">Articulo 2</a>
+        <a href="#articulo3">Articulo 3</a>
+        <a href="#articulo4">Articulo 4</a>
+        <a href="#barralateral1">Barra Lateral</a>
         <section>
             <article>
+                <a name="articulo1"></a>
                 <h2>Articulo 1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nisi sit molestias eligendi? Iste
                     necessitatibus maiores eos nemo dolorem quod, nam distinctio ex! Asperiores odit necessitatibus
                     harum ipsa veritatis sint?</p>
             </article>
             <article>
+                <a name="articulo2"></a>
                 <h2>Articulo 2</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nisi sit molestias eligendi? Iste
                     necessitatibus maiores eos nemo dolorem quod, nam distinctio ex! Asperiores odit necessitatibus
                     harum ipsa veritatis sint?</p>
             </article>
+            <article>
+                <a name="articulo3"></a>
+                <h2>lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nisi sit molestias eligendi? Iste
+                    necessitatibus maiores eos nemo dolorem quod, nam distinctio ex! Asperiores odit necessitatibus
+                    harum ipsa veritatis sint?</p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.710640813319!2d-3.686688184621157!3d40.41526057936537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42289ff511827b%3A0x9e6c2716b524a3ae!2sParque%20de%20El%20Retiro!5e0!3m2!1ses!2ses!4v1633859277497!5m2!1ses!2ses"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </article>
+            <article>
+                <a name="articulo4"></a>
+                <h2>lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nisi sit molestias eligendi? Iste
+                    necessitatibus maiores eos nemo dolorem quod, nam distinctio ex! Asperiores odit necessitatibus
+                    harum ipsa veritatis sint?</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2TQePBCrq8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </article>
         </section>
         <aside>
+            <a name="barralateral1"></a>
             <h3>Barra Lateral</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptatum minima dolor molestiae omnis ab
                 officia pariatur aspernatur, vitae dicta unde quos error fugit velit facilis consequuntur necessitatibus
                 accusamus esse?</p>
         </aside>
+        <a href="#articulo1">Primer Articulo</a>
     </main>
     <footer>
         <h4>Redes Sociales</h4>
-        <a href="#">Instagram</a>
-        <a href="#">Facebook</a>
+        <a href="#"><img src="assets/img/facebook.png" alt="facebook" width="3%"></a>
+        <a href="#"><img src="assets/img/instagram.png" alt="instagram" width="3%"></a>
+        <a href="#"><img src="assets/img/linkedin.png" alt="linkedin" width="3%"></a>
+        <a href="#"><img src="assets/img/whatsapp.png" alt="whatsapp" width="3%"></a>
         <p>Derechos reservados al diseñador y desarrollador.</p>
     </footer>
 </body>
