--- a/index.html
+++ b/index.html
@@ -18,19 +18,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página principal de la web">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
     <title>Inicio</title>
 </head>
 
 <body>
     <header>
+        <!-- Puede ser que el area hero acabe aquí -->
         <h1>Alex Construction</h1>
         <nav>
+            <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="6%"></a>
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
             <a href="contacto.html">Contacto</a>
             <a href="blog.html">Blog</a>
         </nav>
     </header>
+<!--     <style>
+        body{
+            background-color: blue;
+        }
+    </style> -->
     <main>
         <div>
             <!-- Imagen de Area Hero -->
@@ -70,6 +79,11 @@
         </div>
     </main>
     <footer>
+        <h4>Redes Sociales</h4>
+        <a href="#"><img src="assets/img/facebook.png" alt="facebook" width="3%"></a>
+        <a href="#"><img src="assets/img/instagram.png" alt="instagram" width="3%"></a>
+        <a href="#"><img src="assets/img/linkedin.png" alt="linkedin" width="3%"></a>
+        <a href="#"><img src="assets/img/whatsapp.png" alt="whatsapp" width="3%"></a>
         <p>Derechos reservados al diseñador y desarrollador.</p>
     </footer>
 </body>
