--- a/contacto.html
+++ b/contacto.html
@@ -1,28 +1,68 @@
-<!-- 
-• Actividad 4 Crea la página contacte.html con un formulario de contacto que solicite los siguientes datos:
-         ◦ Nombre (30 caracteres como máximo y sólo permita letras y números).
-         ◦ Email.
-         ◦ Edad (entre 18 y 99 años).
-         ◦ Teléfono.
-         ◦ Campo de consulta.
-         ◦ Casilla de selección de aceptación de política de privacidad y cookies.
-Además, todos los campos deben ser obligatorios, el foco debes ponerlo en el campo "Nombre" y todos los insumos deben tener placeholder.
-Incluye también una sección con los datos de contacto y el número de teléfono (con enlace funcional).
- -->
-
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página de contacto para más ayuda">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
     <title>Contacto</title>
 </head>
+
 <body>
-    <form>
-        <legend>Datos Presonales</legend>
-        <label>Nombre: </label>
-        <input type="text">
-    </form>
+    <header>
+        <!-- Puede ser que el area hero acabe aquí -->
+        <h1>Alex Construction</h1>
+        <nav>
+            <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="6%"></a>
+            <a href="index.html">Inicio</a>
+            <a href="servicios.html">Servicios</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="blog.html">Blog</a>
+        </nav>
+    </header>
+    <main>
+        <form>
+            <legend>Contacto</legend>
+            <div>
+                <label for="nombre">Nombre</label>
+                <input type="text" placeholder="Tú Nombre" autofocus required pattern="[A-Za-z0-9]{3,30}">
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="email" placeholder="Tú email" required>
+            </div>
+            <div>
+                <label for="edad">Edad</label>
+                <input type="number" min="18" max="99" placeholder="Tú edad" required>
+                <!-- pattern="([1]{1}[8]{1})"   No supe hacer lo con pattern -->
+            </div>
+            <div>
+                <label for="telefono">Teléfono</label>
+                <input type="tel" placeholder="Tú teléfono" required>
+            </div>
+            <div>
+                <label for="mensaje">Mensaje</label>
+                <textarea name="mensaje" required placeholder="Escribe el mensaje" cols="30" rows="10"></textarea>
+            </div>
+            <div>
+                <label for="check">Acepto la política de privacidad y cookies.</label>
+                <input type="checkbox" required>
+            </div>
+            <div>
+                <input type="submit" value="Enviar">
+            </div>
+        </form>
+    </main>
+    <footer>
+        <h4>Redes Sociales</h4>
+        <a href="#"><img src="assets/img/facebook.png" alt="facebook" width="3%"></a>
+        <a href="#"><img src="assets/img/instagram.png" alt="instagram" width="3%"></a>
+        <a href="#"><img src="assets/img/linkedin.png" alt="linkedin" width="3%"></a>
+        <a href="#"><img src="assets/img/whatsapp.png" alt="whatsapp" width="3%"></a>
+        <p>Derechos reservados al diseñador y desarrollador.</p>
+    </footer>
 </body>
+
 </html>
