--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <!-- Puede ser que el area hero acabe aquí -->
         <h1>Alex Construction</h1>
         <nav>
+            <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
             <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="6%"></a>
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
@@ -35,11 +36,6 @@
             <a href="blog.html">Blog</a>
         </nav>
     </header>
-<!--     <style>
-        body{
-            background-color: blue;
-        }
-    </style> -->
     <main>
         <div>
             <!-- Imagen de Area Hero -->
@@ -48,7 +44,7 @@
             <h2>Mis Servicios</h2>
             <section>
                 <h3>Servicio 1</h3>
-                <div><!--Imagen de Icono---></div>
+                <div><!--Imagen de Icono--></div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
@@ -58,7 +54,7 @@
             </section>
             <section>
                 <h3>Servicio 2</h3>
-                <div><!--Imagen de Icono---></div>
+                <div><!--Imagen de Icono--></div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
@@ -68,7 +64,7 @@
             </section>
             <section>
                 <h3>Servicio 3</h3>
-                <div><!--Imagen de Icono---></div>
+                <div><!--Imagen de Icono--></div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
@@ -80,6 +76,7 @@
     </main>
     <footer>
         <h4>Redes Sociales</h4>
+        <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
         <a href="#"><img src="assets/img/facebook.png" alt="facebook" width="3%"></a>
         <a href="#"><img src="assets/img/instagram.png" alt="instagram" width="3%"></a>
         <a href="#"><img src="assets/img/linkedin.png" alt="linkedin" width="3%"></a>
