--- a/servicios.html
+++ b/servicios.html
@@ -15,6 +15,7 @@
         <!-- Puede ser que el area hero acabe aquí -->
         <h1>Alex Construction</h1>
         <nav>
+            <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
             <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="6%"></a>
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
@@ -66,6 +67,7 @@
     </main>
     <footer>
         <h4>Redes Sociales</h4>
+        <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
         <a href="#"><img src="assets/img/facebook.png" alt="facebook" width="3%"></a>
         <a href="#"><img src="assets/img/instagram.png" alt="instagram" width="3%"></a>
         <a href="#"><img src="assets/img/linkedin.png" alt="linkedin" width="3%"></a>
