--- a/servicios.html
+++ b/servicios.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aquí se puden ver los servicios de los que disponemos">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Servicios</title>
 </head>
 
@@ -23,11 +24,7 @@
             <a href="blog.html">Blog</a>
         </nav>
     </header>
-    <style>
-        table, th, td {
-            border:1px solid black;
-        }
-    </style>
+    
     <main>
         <table>
             <thead>
