--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página principal de la web">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Inicio</title>
 </head>
@@ -30,7 +30,7 @@
         <h1>Alex Construction</h1>
         <nav>
             <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
-            <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="3%"></a>
+            <a href="index.html"><img src="assets/img/logo_small_icon_only_inverted.png" alt="logo" width="3%"></a> 
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
             <a href="contacto.html">Contacto</a>
