--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página de contacto para más ayuda">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Contacto</title>
 </head>
@@ -17,7 +17,7 @@
         <h1>Alex Construction</h1>
         <nav>
             <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
-            <a href="index.html"><img src="assets/img/logo.png" alt="logo" width="3%"></a>
+            <a href="index.html"><img src="assets/img/logo_small_icon_only_inverted.png" alt="logo" width="3%"></a>
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
             <a href="contacto.html">Contacto</a>
