--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Blog de datos de interes">
+    <meta name="description" content="Blog donde podrás ver todas las novedades de las que disponemos y de muchas más noticias interesantes sobre este sector, para que puedas estar al día sobre todos los cambios en construción.">
     <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Blog</title>
@@ -62,6 +62,15 @@
                     necessitatibus maiores eos nemo dolorem quod, nam distinctio ex! Asperiores odit necessitatibus
                     harum ipsa veritatis sint?</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/2TQePBCrq8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </article>
+            <article>
+                <a name="articulo5"></a>
+                <h2>CodePen</h2>
+                <iframe height="600" style="width: 100%;" scrolling="no" title="Credit Card Form - VueJs" src="https://codepen.io/JavaScriptJunkie/embed/YzzNGeR?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                    See the Pen <a href="https://codepen.io/JavaScriptJunkie/pen/YzzNGeR">
+                    Credit Card Form - VueJs</a> by Muhammed Erdem (<a href="https://codepen.io/JavaScriptJunkie">@JavaScriptJunkie</a>)
+                    on <a href="https://codepen.io">CodePen</a>.
+                  </iframe>
             </article>
         </section>
         <aside>
