--- a/contacto.html
+++ b/contacto.html
@@ -33,15 +33,15 @@
             </div>
             <div>
                 <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Tú email" required>
+                <input type="email" id="email" placeholder="Tu email" required>
             </div>
             <div>
                 <label for="edad">Edad</label>
-                <input type="number" id="edad" min="18" max="99" placeholder="Tú edad" required>
+                <input type="number" id="edad" min="18" max="99" placeholder="Tu edad" required>
             </div>
             <div>
                 <label for="telefono">Teléfono</label>
-                <input type="tel" id="telefono" placeholder="Tú teléfono" required>
+                <input type="tel" id="telefono" placeholder="Tu teléfono" required>
             </div>
             <div>
                 <label for="mensaje">Mensaje</label>
