--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página principal de la web">
+    <meta name="description" content="Página principal de la web Alex Construction sobre construcción y montajes de pladur. En esta página encontrarás información sobre lo que hacemos y como contactar con nosotros.">
     <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Inicio</title>
