--- a/servicios.html
+++ b/servicios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aquí se puden ver los servicios de los que disponemos">
+    <meta name="description" content="Aquí se pueden ver algunas de las fotos que les hemos hecho algunos de nuestros proyectos, también podrás ver una pequeña descripción del trabajo realizado en la obra.">
     <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Servicios</title>
@@ -65,12 +65,36 @@
     <footer>
         <h4>Redes Sociales</h4>
         <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
-        <a href="#"><img src="assets/img/facebook.png" alt="facebook" width="3%"></a>
-        <a href="#"><img src="assets/img/instagram.png" alt="instagram" width="3%"></a>
-        <a href="#"><img src="assets/img/linkedin.png" alt="linkedin" width="3%"></a>
-        <a href="#"><img src="assets/img/whatsapp.png" alt="whatsapp" width="3%"></a>
+        <a href="facebook.es">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+              </svg></a>
+        <a href="instagram.com">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <rect x="4" y="4" width="16" height="16" rx="4" />
+                <circle cx="12" cy="12" r="3" />
+                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+              </svg></a>
+        <a href="linkedin.es">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <rect x="4" y="4" width="16" height="16" rx="2" />
+                <line x1="8" y1="11" x2="8" y2="16" />
+                <line x1="8" y1="8" x2="8" y2="8.01" />
+                <line x1="12" y1="16" x2="12" y2="11" />
+                <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+              </svg></a>
+        <a href="whatsapp.com">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+                <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
+              </svg></a>
         <p>Derechos reservados al diseñador y desarrollador.</p>
     </footer>
+
 </body>
 
 </html>
