--- a/index.html
+++ b/index.html
@@ -1,16 +1,3 @@
-<!-- 
-
- ######\  ##\                            ######\                                  ##\                           ##\     ##\                     
-##  __##\ ## |                          ##  __##\                                 ## |                          ## |    \__|                    
-## /  ## |## | ######\  ##\   ##\       ## /  \__| ######\  #######\   #######\ ######\    ######\  ##\   ##\ ######\   ##\  ######\  #######\  
-######## |## |##  __##\ \##\ ##  |      ## |      ##  __##\ ##  __##\ ##  _____|\_##  _|  ##  __##\ ## |  ## |\_##  _|  ## |##  __##\ ##  __##\ 
-##  __## |## |######## | \####  /       ## |      ## /  ## |## |  ## |\######\    ## |    ## |  \__|## |  ## |  ## |    ## |## /  ## |## |  ## |
-## |  ## |## |##   ____| ##  ##<        ## |  ##\ ## |  ## |## |  ## | \____##\   ## |##\ ## |      ## |  ## |  ## |##\ ## |## |  ## |## |  ## |
-## |  ## |## |\#######\ ##  /\##\       \######  |\######  |## |  ## |#######  |  \####  |## |      \######  |  \####  |## |\######  |## |  ## |
-\__|  \__|\__| \_______|\__/  \__|       \______/  \______/ \__|  \__|\_______/    \____/ \__|       \______/    \____/ \__| \______/ \__|  \__|
-                                                                                                                                                
- -->
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -27,10 +14,10 @@
 <body>
     <header>
         <!-- Puede ser que el area hero acabe aquí -->
-        <h1>Alex Construction</h1>
+        <h1>Alex <span>Construction</span></h1>
         <nav>
             <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
-            <a href="index.html"><img src="assets/img/logo_small_icon_only_inverted.png" alt="logo" width="3%"></a> 
+            <a href="index.html"><img src="assets/img/logo_small_icon_only_inverted.png" alt="logo"></a> 
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
             <a href="contacto.html">Contacto</a>
