--- a/contacto.html
+++ b/contacto.html
@@ -15,10 +15,10 @@
 <body>
     <header>
         <!-- Puede ser que el area hero acabe aquí -->
-        <h1>Alex Construction</h1>
+        <h1>Alex <span>Construction</span></h1>
         <nav>
             <!-- Se que los width no estan bien los aplicaré en el css para quitarlos de aquí -->
-            <a href="index.html"><img src="assets/img/logo_small_icon_only_inverted.png" alt="logo" width="3%"></a>
+            <a href="index.html"><img src="assets/img/logo_small_icon_only_inverted.png" alt="logo"></a>
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
             <a href="contacto.html">Contacto</a>
