--- a/blog.html
+++ b/blog.html
@@ -12,15 +12,22 @@
 </head>
 
 <body>
-    <header>
-        <!-- Puede ser que el area hero acabe aquí -->
-        <h1>Alex <span>Construction</span></h1>
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="servicios.html">Servicios</a>
-            <a href="contacto.html">Contacto</a>
-            <a href="blog.html">Blog</a>
-        </nav>
+    <header class="header">
+        <div class="contenedor__centrado">
+            <a class="logo" href="index.html">
+                <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
+            </a>
+            <nav class="navegacion">
+                <a class="navegacion__enlace" href="index.html">Inicio</a>
+                <a class="navegacion__enlace" href="proyectos.html">Proyectos</a>
+                <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+                <a class="navegacion__enlace" href="blog.html">Blog</a>
+            </nav>
+        </div>
+        <div class="header__texto">
+            <h2>Bienvenido a Alex Constrution</h2>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
     </header>
     <main>
         <a href="#articulo1">Articulo 1</a>
