--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Página principal de la web Alex Construction sobre construcción y montajes de pladur. En esta página encontrarás información sobre lo que hacemos y como contactar con nosotros.">
+    <meta name="description"
+        content="Página principal de la web Alex Construction sobre construcción y montajes de pladur. En esta página encontrarás información sobre lo que hacemos y como contactar con nosotros.">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Inicio</title>
@@ -13,25 +14,30 @@
 
 <body>
     <header class="header">
-        <a class="logo" href="index.html">
-            <h1 class="logo__nombre">Alex <span class="logo__bold">Construction</span></h1>
-        </a>        
-        <nav class="navegacion">
-            <a class="navegacion__enlace" href="index.html">Inicio</a>
-            <a class="navegacion__enlace" href="servicios.html">Servicios</a>
-            <a class="navegacion__enlace" href="contacto.html">Contacto</a>
-            <a class="navegacion__enlace" href="blog.html">Blog</a>
-        </nav>
+        <div class="contenedor__centrado">
+            <a class="logo" href="index.html">
+                <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
+            </a>
+            <nav class="navegacion">
+                <a class="navegacion__enlace" href="index.html">Inicio</a>
+                <a class="navegacion__enlace" href="proyectos.html">Proyectos</a>
+                <a class="navegacion__enlace" href="contacto.html">Contacto</a>
+                <a class="navegacion__enlace" href="blog.html">Blog</a>
+            </nav>
+        </div>
+        <div class="header__texto">
+            <h2>Bienvenido a Alex Constrution</h2>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
     </header>
     <main>
-        <div>
-            <!-- Imagen de Area Hero -->
-        </div>
-        <div>
-            <h2>Mis Servicios</h2>
-            <section>
+        <div class="contenedor__centrado servicios">
+            <h2 class="servicios__titulo">Mis Servicios</h2>
+            <section >
                 <h3>Servicio 1</h3>
-                <div><!--Imagen de Icono--></div>
+                <div>
+                    <!--Imagen de Icono-->
+                </div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
@@ -41,7 +47,9 @@
             </section>
             <section>
                 <h3>Servicio 2</h3>
-                <div><!--Imagen de Icono--></div>
+                <div>
+                    <!--Imagen de Icono-->
+                </div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
@@ -51,7 +59,9 @@
             </section>
             <section>
                 <h3>Servicio 3</h3>
-                <div><!--Imagen de Icono--></div>
+                <div>
+                    <!--Imagen de Icono-->
+                </div>
                 <p>
                     Pellentesque hendrerit urna eget leo
                     tempus efficitur. Maecenas fringilla est eget
@@ -61,7 +71,7 @@
             </section>
         </div>
     </main>
-    <footer>
+    <footer class="footer">
         <h4>Redes Sociales</h4>
         <a href="https://es-es.facebook.com/">
             <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
