css actividades retoques

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog donde podrás ver todas las novedades de las que disponemos y de muchas más noticias interesantes sobre este sector, para que puedas estar al día sobre todos los cambios en construcción.">
     <link rel="shortcut icon" type="image/svg" href="assets/img/favicon.svg">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" media="print" href="assets/css/especialStyle.css" />
     <title>Blog</title>
 </head>
 
