--- a/contacto.html
+++ b/contacto.html
@@ -31,8 +31,7 @@
             <p>Lorem ipsum dolor sit amet</p>
         </div>
     </header>
-    <main>
-        <form class="formulario contenedor__centrado">
+        <form class="formulario">
             <div class="campo">
                 <input type="text" placeholder="Nombre" autofocus required pattern="[A-Za-z0-9]{3,30}">
             </div>
@@ -42,7 +41,7 @@
             <div class="campo">
                 <input type="number" min="18" max="99" placeholder="Edad" required>
             </div>
-            <div class="campo">
+            <div class="campo"> 
                 <input type="tel" placeholder="Teléfono" required>
             </div>
             <div class="campo">
@@ -56,10 +55,9 @@
                 <input type="submit" value="Enviar">
             </div>
         </form>
-    </main>
-    <footer>
-        <h4>Redes Sociales</h4>
-        <a href="https://es-es.facebook.com/">
+        <footer>
+            <h4>Redes Sociales</h4>
+            <a href="https://es-es.facebook.com/">
             <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
         <a href="https://www.instagram.com/">
             <img class="redes-logo" src="assets/img/instagram.png" alt="logo-instagram"></a>
