--- a/proyectos.html
+++ b/proyectos.html
@@ -32,7 +32,7 @@
     </header>
     
     <main>
-        <table>
+        <table class="contenedor__centrado">
             <thead>
                 <caption>Tabla</caption>
                 <th>Lorem</th>
