css casi todo lo que pide

--- a/index.html
+++ b/index.html
@@ -69,6 +69,54 @@
                     accumsan feugiat sapien eget finibus.
                 </p>
             </section>
+            <section>
+                <h3>Servicio 3</h3>
+                <div>
+                    <!--Imagen de Icono-->
+                </div>
+                <p>
+                    Pellentesque hendrerit urna eget leo
+                    tempus efficitur. Maecenas fringilla est eget
+                    mi ultricies, quis laoreet leo eleifend. Cras
+                    accumsan feugiat sapien eget finibus.
+                </p>
+            </section>
+            <section>
+                <h3>Servicio 3</h3>
+                <div>
+                    <!--Imagen de Icono-->
+                </div>
+                <p>
+                    Pellentesque hendrerit urna eget leo
+                    tempus efficitur. Maecenas fringilla est eget
+                    mi ultricies, quis laoreet leo eleifend. Cras
+                    accumsan feugiat sapien eget finibus.
+                </p>
+            </section>
+            <section>
+                <h3>Servicio 3</h3>
+                <div>
+                    <!--Imagen de Icono-->
+                </div>
+                <p>
+                    Pellentesque hendrerit urna eget leo
+                    tempus efficitur. Maecenas fringilla est eget
+                    mi ultricies, quis laoreet leo eleifend. Cras
+                    accumsan feugiat sapien eget finibus.
+                </p>
+            </section>
+            <section>
+                <h3>Servicio 3</h3>
+                <div>
+                    <!--Imagen de Icono-->
+                </div>
+                <p>
+                    Pellentesque hendrerit urna eget leo
+                    tempus efficitur. Maecenas fringilla est eget
+                    mi ultricies, quis laoreet leo eleifend. Cras
+                    accumsan feugiat sapien eget finibus.
+                </p>
+            </section>
         </div>
     </main> 
     <footer class="footer">
