modificando navegacion y header

--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="contenedor__centrado">
+    <header class="header__inicio">
+        <div>
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
             </a>
@@ -25,12 +25,8 @@
                 <a class="navegacion__enlace" href="blog.html">Blog</a>
             </nav>
         </div>
-        <div class="header__texto">
-            <h2>Bienvenido a Alex Constrution</h2>
-            <p>Lorem ipsum dolor sit amet</p>
-        </div>
     </header>
-    <main>
+    <main class="contenedor__centrado">
         <a href="#articulo1">Articulo 1</a>
         <a href="#articulo2">Articulo 2</a>
         <a href="#articulo3">Articulo 3</a>
@@ -45,11 +41,43 @@
                     harum ipsa veritatis sint?</p>
             </article>
             <article>
-                <a name="articulo2"></a>
-                <h2>Articulo 2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nisi sit molestias eligendi? Iste
-                    necessitatibus maiores eos nemo dolorem quod, nam distinctio ex! Asperiores odit necessitatibus
-                    harum ipsa veritatis sint?</p>
+                <a name="Actividad 8"></a>
+                <h2>Tabla</h2>
+                <table class="contenedor__centrado table">
+                    <thead>
+                        <caption>Tabla</caption>
+                        <th>Lorem</th>
+                        <th>Lorem</th>
+                        <th>Lorem</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                            <td>Lorem ipsum dolor.</td>
+                        </tr>
+                    </tbody>
+                </table>
             </article>
             <article>
                 <a name="articulo3"></a>
