--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header__inicio">
         <div class="contenedor__centrado">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
@@ -55,8 +55,7 @@
                 <input type="submit" value="Enviar">
             </div>
         </form>
-        <footer>
-            <h4>Redes Sociales</h4>
+        <footer class="contenedor__centrado">
             <a href="https://es-es.facebook.com/">
             <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
         <a href="https://www.instagram.com/">
