--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header__inicio">
         <div class="contenedor__centrado">
-            <a class="logo" href="index.html">
-                <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
-            </a>
             <nav class="navegacion">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
+                </a>
                 <a class="navegacion__enlace" href="index.html">Inicio</a>
                 <a class="navegacion__enlace" href="proyectos.html">Proyectos</a>
                 <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 <a class="navegacion__enlace" href="blog.html">Blog</a>
             </nav>
         </div>
-        <div class="header__texto">
-            <h2>Bienvenido a Alex Constrution</h2>
-            <p>Lorem ipsum dolor sit amet</p>
-        </div>
     </header>
+    <div class="header__texto">
+        <h2>Bienvenido a Alex Constrution</h2>
+        <p>Lorem ipsum dolor sit amet</p>
+    </div>
     <main>
         <div class="contenedor__centrado servicios">
             <h2 class="servicios__titulo">Mis Servicios</h2>
@@ -119,8 +119,7 @@
             </section>
         </div>
     </main> 
-    <footer class="footer">
-        <h4>Redes Sociales</h4>
+    <footer class="footer contenedor__centrado">
         <a href="https://es-es.facebook.com/">
             <img class="redes-logo" src="assets/img/facebook.png" alt="logo-facebook"></a>
         <a href="https://www.instagram.com/">
