--- a/proyectos.html
+++ b/proyectos.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header__inicio">
         <div class="contenedor__centrado">
             <a class="logo" href="index.html">
                 <h1 class="logo__nombre">Alex<span class="logo__bold">Construction</span></h1>
@@ -24,10 +24,6 @@
                 <a class="navegacion__enlace" href="contacto.html">Contacto</a>
                 <a class="navegacion__enlace" href="blog.html">Blog</a>
             </nav>
-        </div>
-        <div class="header__texto">
-            <h2>Bienvenido a Alex Constrution</h2>
-            <p>Lorem ipsum dolor sit amet</p>
         </div>
     </header>
     
