intento de flexbox

--- a/blog.html
+++ b/blog.html
@@ -100,11 +100,12 @@
             <article>
                 <a name="articulo5"></a>
                 <h2>CodePen</h2>
-                <iframe height="600" style="width: 100%;" scrolling="no" title="Credit Card Form - VueJs" src="https://codepen.io/JavaScriptJunkie/embed/YzzNGeR?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-                    See the Pen <a href="https://codepen.io/JavaScriptJunkie/pen/YzzNGeR">
+                <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="YzzNGeR" data-user="JavaScriptJunkie" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                    <span>See the Pen <a href="https://codepen.io/JavaScriptJunkie/pen/YzzNGeR">
                     Credit Card Form - VueJs</a> by Muhammed Erdem (<a href="https://codepen.io/JavaScriptJunkie">@JavaScriptJunkie</a>)
-                    on <a href="https://codepen.io">CodePen</a>.
-                  </iframe>
+                    on <a href="https://codepen.io">CodePen</a>.</span>
+                  </p>
+                  <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
             </article>
         </section>
         <aside>
